Switch to Pushover notification service.

--- a/scrappy-ddns.conf
+++ b/scrappy-ddns.conf
@@ -1,12 +1,19 @@
 # Scrappy DDNS configuration file
 #
-# API key for Android push notifications. You obtain an API key from the
-# Notify My Android web site: http://www.notifymyandroid.com. This can
-# be a single key or multiple keys separated by commas inside the string.
-# One key example:
-ANDROID_PUSH_API_KEY='abc123'
-# Multiple key example:
-# ANDROID_PUSH_API_KEY='abc123,def456'
+# User key for Pushover notifications. Register at https://pushover.net
+# to obtain your key. You can also specify a group key here if you want
+# to notify multiple recipients.
+# PUSHOVER_USER_KEY='abc123'
+
+# Application key for Pushover notifications. Obtain an application key
+# for your copy of Scrappy DDNS by visiting https://pushover.net/apps/build.
+# PUSHOVER_APP_KEY='def456'
+
+# Optional message priority, which can be used to bypass quiet hours or
+# require acknowledgement of the notification. For valid values, see
+# https://pushover.net/api#priority. If left unspecified, priority 0
+# (normal) is used.
+# PUSHOVER_MSG_PRIORITY=0
 
 # IP address cache directory must be readable/writable by the service
 # process. If left unspecified, the current directory is used.
