Improve logging under WSGI container. Fix config file comments.

--- a/scrappyddns.conf
+++ b/scrappyddns.conf
@@ -17,11 +17,11 @@
 
 # IP address cache directory must be readable/writable by the service
 # process. If left unspecified, the current directory is used.
-# IP_ADDRESS_CACHE='/var/cache/scrappy-ddns'
+# IP_ADDRESS_CACHE='/var/cache/scrappyddns'
 
 # Path and filename of the token list file. If left unspecified, 'token.list'
 # in the current directory will be used.
-# TOKEN_LIST_FILE='/etc/scrappy-ddns/token.list'
+# TOKEN_LIST_FILE='/etc/scrappyddns/token.list'
 
 # Log level can be one of DEBUG, INFO, WARNING, ERROR. Default is INFO.
 # LOG_LEVEL='DEBUG'
@@ -30,4 +30,4 @@
 # most recent ones are kept. If left unspecified, log entries are written to
 # standard output. Note that when running as a Python script using the embedded
 # HTTP server, access logs are always written to standard error.
-# LOG_FILE='/var/log/scrappy-ddns.log'
+# LOG_FILE='/var/log/scrappyddns.log'
