Shorten config var names and support overrides from env vars with SCRAPPY_ prefix.

--- a/scrappyddns.conf
+++ b/scrappyddns.conf
@@ -3,17 +3,17 @@
 # User key for Pushover notifications. Register at https://pushover.net
 # to obtain your key. You can also specify a group key here if you want
 # to notify multiple recipients.
-# PUSHOVER_USER_KEY='abc123'
+# PUSH_USER_KEY='abc123'
 
 # Application key for Pushover notifications. Obtain an application key
 # for your copy of Scrappy DDNS by visiting https://pushover.net/apps/build.
-# PUSHOVER_APP_KEY='def456'
+# PUSH_APP_KEY='def456'
 
 # Optional message priority, which can be used to bypass quiet hours or
 # require acknowledgement of the notification. For valid values, see
 # https://pushover.net/api#priority. If left unspecified, priority 0
 # (normal) is used.
-# PUSHOVER_MSG_PRIORITY=0
+# PUSH_MSG_PRIORITY=0
 
 # IP address cache directory must be readable/writable by the service
 # process. If left unspecified, the current directory is used.
@@ -21,7 +21,7 @@
 
 # Path and filename of the token list file. If left unspecified, 'token.list'
 # in the current directory will be used.
-# TOKEN_LIST_FILE='/etc/scrappyddns/token.list'
+# TOKEN_FILE='/etc/scrappyddns/token.list'
 
 # Log level can be one of DEBUG, INFO, WARNING, ERROR. Default is INFO.
 # LOG_LEVEL='DEBUG'
