Add support for "X-Forwarded-For" header to resolve client IP addresses across proxies.

--- a/scrappyddns.conf
+++ b/scrappyddns.conf
@@ -1,13 +1,16 @@
 # Scrappy DDNS configuration file
-#
+
+
 # User key for Pushover notifications. Register at https://pushover.net
 # to obtain your key. You can also specify a group key here if you want
 # to notify multiple recipients.
 # PUSH_USER_KEY='abc123'
 
+
 # Application key for Pushover notifications. Obtain an application key
 # for your copy of Scrappy DDNS by visiting https://pushover.net/apps/build.
 # PUSH_APP_KEY='def456'
+
 
 # Optional message priority, which can be used to bypass quiet hours or
 # require acknowledgement of the notification. For valid values, see
@@ -15,19 +18,52 @@
 # (normal) is used.
 # PUSH_MSG_PRIORITY=0
 
+
 # IP address cache directory must be readable/writable by the service
 # process. If left unspecified, the current directory is used.
 # IP_ADDRESS_CACHE='/var/cache/scrappyddns'
+
 
 # Path and filename of the token list file. If left unspecified, 'token.list'
 # in the current directory will be used.
 # TOKEN_FILE='/etc/scrappyddns/token.list'
 
+
 # Log level can be one of DEBUG, INFO, WARNING, ERROR. Default is INFO.
 # LOG_LEVEL='DEBUG'
+
 
 # File for log output. Log files are automatically rotated at 1 MB and the 5
 # most recent ones are kept. If left unspecified, log entries are written to
 # standard output. Note that when running as a Python script using the embedded
 # HTTP server, access logs are always written to standard error.
 # LOG_FILE='/var/log/scrappyddns.log'
+
+
+# The number of (reverse) proxies that sit between the Scrappy DDNS service and its
+# clients. When Scrappy is set up behind a reverse proxy like nginx or Apache, it
+# usually can't get the client's real IP address from the connection. Instead,
+# it sees the IP address of the proxy (e.g. 127.0.0.1 or some internal address).
+#
+# By setting PROXY_COUNT to a positive value (typically 1), Scrappy will try to
+# use the "X-Forwarded-For" header to determine the client's real IP address by
+# counting down from the rightmost node. For example, given:
+#
+#   X-Forwared-For: 147.129.56.50, 147.129.1.1, 192.168.1.1, 127.0.0.1
+#
+# and a PROXY_COUNT of 3, Scrappy will take 147.129.1.1 as the IP address of the
+# client. (Addresses farther to the left may be internal to the client's network or not
+# reliable.) Much more common, though, is a count of 1 and a single IP address in the
+# header that points to the client.
+#
+# When PROXY_COUNT > 0, all trusted proxies must append the source IP address of each0
+# requests to the "X-Forwarded-For" header. For an example of how to set this up in nginx,
+# see https://github.com/rhasselbaum/docker-scrappy-ddns/blob/master/scrappyddns-site.
+#
+# If left unspecified, the default PROXY_COUNT is 0 and Scrappy DDNS uses the source IP
+# of the connection as the client IP, ignoring any "X-Forwarded-For" header.
+#
+# This setting has no effect for clients that provide their IP addresses in the
+# "ip_address" URL header.
+#
+# PROXY_COUNT=1
